[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
primitive-types = {version="0.12.2", features = ["serde"]}
rand = "0.8.5"
rocket = {version="0.5.0", features=["serde_json", "json"]}
sha2 = "0.10.8"
