[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
primitive-types = {version="0.12.2", features = ["serde"]}
rand = "0.8.5"
rocket = {version="0.5.0", features=["serde_json", "json"]}
serde_json = "1.0.116"
sha2 = "0.10.8"
sled = "0.34.7"
tempfile = "3.10.1"
